# httparse

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  bench.ipynb  pyproject.toml  requirements-bench.txt  requirements-dev.txt  test_httparse.py
.github/workflows/: python.yaml
python/httparse/: __init__.py  _httparse.pyi
src/: lib.rs
